recursion.hanoi.lessons.recursion.hanoi.InterleavedHanoi.scala.error
InterleavedHanoi:17: error: not found: value scr2
  interleavedHanoi(height-1, other, src1, scr2, dst)
                                          ^